@@ -68,6 +68,9 @@ public:
   virtual dvdnav_status_t dvdnav_audio_change(dvdnav_t *self, int32_t audio)=0;
   virtual dvdnav_status_t dvdnav_get_audio_info(dvdnav_t * self, int32_t streamid, audio_attr_t* audio_attributes)=0;
   virtual dvdnav_status_t dvdnav_get_stitle_info(dvdnav_t * self, int32_t streamid, subp_attr_t* stitle_attributes)=0;
+  virtual dvdnav_status_t dvdnav_time_search(dvdnav_t * self, uint64_t timepos)=0;
+  virtual int64_t dvdnav_convert_time(dvd_time_t *time)=0;
+
 };
 
 class DllDvdNav : public DllDynamic, DllDvdNavInterface
@@ -126,6 +129,8 @@ class DllDvdNav : public DllDynamic, DllDvdNavInterface
   DEFINE_METHOD2(dvdnav_status_t, dvdnav_audio_change, (dvdnav_t *p1, int32_t p2))
   DEFINE_METHOD3(dvdnav_status_t, dvdnav_get_audio_info, (dvdnav_t * p1, int32_t p2, audio_attr_t* p3))
   DEFINE_METHOD3(dvdnav_status_t, dvdnav_get_stitle_info, (dvdnav_t * p1, int32_t p2, subp_attr_t* p3))
+  DEFINE_METHOD2(dvdnav_status_t, dvdnav_time_search, (dvdnav_t * p1, uint64_t p2))
+  DEFINE_METHOD1(int64_t, dvdnav_convert_time, (dvd_time_t *p1))
   BEGIN_METHOD_RESOLVE()
     RESOLVE_METHOD(dvdnav_open)
     RESOLVE_METHOD(dvdnav_close)
@@ -180,5 +185,7 @@ class DllDvdNav : public DllDynamic, DllDvdNavInterface
     RESOLVE_METHOD(dvdnav_audio_change)
     RESOLVE_METHOD(dvdnav_get_audio_info)
     RESOLVE_METHOD(dvdnav_get_stitle_info)
+    RESOLVE_METHOD(dvdnav_time_search)
+    RESOLVE_METHOD(dvdnav_convert_time)
 END_METHOD_RESOLVE()
 };
